--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "extends": "airbnb-base",
     "rules": {
       "no-return-await": 0,
-      "comma-dangle": ["error", "never"]
+      "comma-dangle": [
+        "error",
+        "never"
+      ]
     }
   }
 }
